[gd_scene load_steps=14 format=2]

[ext_resource path="res://dudes/dude.tscn" type="PackedScene" id=1]
[ext_resource path="res://dudes/Monk/Monk.gd" type="Script" id=2]
[ext_resource path="res://assets/units/Monk/heal_0003.png" type="Texture" id=3]
[ext_resource path="res://assets/units/Monk/heal_0001.png" type="Texture" id=4]
[ext_resource path="res://assets/units/Monk/heal_0002.png" type="Texture" id=5]
[ext_resource path="res://assets/units/Monk/blue/walk_right_0001.png" type="Texture" id=6]
[ext_resource path="res://assets/units/Monk/blue/walk_right_0002.png" type="Texture" id=7]
[ext_resource path="res://assets/units/Monk/red/walk_right_0001.png" type="Texture" id=8]
[ext_resource path="res://assets/units/Monk/red/walk_right_0002.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 120.0

[node name="Monk" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_health = 7
regular_sprites = SubResource( 3 )
enemy_sprites = SubResource( 4 )

[node name="AnimatedSprite" parent="." index="2"]
frame = 0

[node name="HealingEffect" type="AnimatedSprite" parent="AnimatedSprite" index="0"]
visible = false
frames = SubResource( 2 )

[node name="HealTimer" type="Timer" parent="." index="4"]
wait_time = 5.0

[node name="HealRange" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealRange" index="0"]
shape = SubResource( 1 )

[connection signal="animation_finished" from="AnimatedSprite/HealingEffect" to="." method="_on_HealingEffect_animation_finished"]
[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
